added content to index and made about and gallery

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#home">Home</a>
-        <a href="#">About</a>
-        <a href="#">Gallery</a>
-        <a href="#">Order Here</a>
+        <a href="index.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="Gallery.html">Gallery</a>
+        <a href="Form.html">Order Here</a>
 
         <div class="search-container">
           <form action="index.html">
@@ -20,9 +20,9 @@
             <button id="searchButton">🔎</button>
           </form>
         </div>
-        <h1 id="logo">Phoenix Pools and Spas</h1>
+        <h1 id="logo">Pools and Spas</h1>
         <hr id="underline">
-      </div>  
+      </div>
 
       <div id="content">
         <h1 id="item-2-1" style="font-size: xx-large;">Phoenix Pools and Spas</h1>
@@ -38,7 +38,7 @@
           <p>Thunderbird Pools & Spas is a family-owned and operated company. Since August 6, 2002, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community.</p>
           <p>At Thunderbird Pools, we have built our reputation as Phoenix pool builders, contractors, and designers by focusing on top-quality contracting, unique custom designs, and fantastic customer service. We use only the best equipment and materials available on the market, and we custom-design every project to meet our customers’ budgets as well as their dreams . . . take a look at our Gallery to see the beautiful pools we’ve created with our customers.</p>
           <p>In addition to designing and building new swimming pools, we also remodel, repair for families and property owners in our community: Phoenix, Anthem, Peoria, Glendale, Scottsdale, Buckeye, Goodyear, Litchfield Park, Gilbert, Chandler and Mesa.</p>
-          <p>Because we work so hard to keep our reputation as the Phoenix pool contractor who gives our customers our very best, many of our customers are customers for life. We’re a close-knit, friendly company. We call ourselves and we’re looking forward to getting to know you. Anytime you want to talk to us, just give us a call at 623-825-4422.</p>
+          <p>Because we work so hard to keep our reputation as the Phoenix pool contractor who gives our customers our very best, many of our customers are customers for life. We’re a close-knit, friendly company. We call ourselves and we’re looking forward to getting to know you. Anytime you want to talk to us, just give us a call at 623-837(0555).</p>
           
         </div>
         <div id="item-2-4">
