added content to gallery

--- a/Gallery.html
+++ b/Gallery.html
@@ -24,25 +24,52 @@
         <hr id="underline">
       </div>
 
+      <div id="Gallery">
+            <img src="images/Gallery1.jpg" id="item-3-1" class="images" onclick="galleryImg1()">
+            <img src="images/Gallery2.jpg" id="item-3-2" class="images" onclick="galleryImg2()">
+            <img src="images/Gallery3.jpg" id="item-3-3" class="images" onclick="galleryImg3()">
+            <img src="images/Gallery4.jpg" id="item-3-4" class="images" onclick="galleryImg4()">
+            <img src="images/Gallery5.jpg" id="item-3-5" class="images" onclick="galleryImg5()">
+            <img src="images/Gallery6.jpg" id="item-3-6" class="images" onclick="galleryImg6()">
+            <img src="images/Gallery7.jpg" id="item-3-7" class="images" onclick="galleryImg7()">
+            <img src="images/Gallery8.jpg" id="item-3-8" class="images" onclick="galleryImg8()">
+            <img src="images/Gallery9.jpg" id="item-3-9" class="images" onclick="galleryImg9()">
+            <img src="images/Gallery10.jpg" id="item-3-10" class="images" onclick="galleryImg10()">
+            <img src="images/Gallery11.jpg" id="item-3-11" class="images" onclick="galleryImg11()">
+            <img src="images/Gallery12.jpg" id="item-3-12" class="images" onclick="galleryImg12()">
+
+            <img src="images/Gallery1.jpg" class="imagesFS" id="FSImage1">
+            <img src="images/Gallery2.jpg" class="imagesFS" id="FSImage2">
+            <img src="images/Gallery3.jpg" class="imagesFS" id="FSImage3">
+            <img src="images/Gallery4.jpg" class="imagesFS" id="FSImage4">
+            <img src="images/Gallery5.jpg" class="imagesFS" id="FSImage5">
+            <img src="images/Gallery6.jpg" class="imagesFS" id="FSImage6">
+            <img src="images/Gallery7.jpg" class="imagesFS" id="FSImage7">
+            <img src="images/Gallery8.jpg" class="imagesFS" id="FSImage8">
+            <img src="images/Gallery9.jpg" class="imagesFS" id="FSImage9">
+            <img src="images/Gallery10.jpg" class="imagesFS" id="FSImage10">
+            <img src="images/Gallery11.jpg" class="imagesFS" id="FSImage11">
+            <img src="images/Gallery12.jpg" class="imagesFS" id="FSImage12">
+      </div>
+
       <div id="footer">
         <div id="item-1" class="items">
             <p>Saturday: 10:00AM - 4:00PM</p>
             <p>Sunday: Closed</p>
             <p>Weekdays: 9:00AM - 5:00PM</p>
         </div>
-        
         <div id="item-2" class="items">
             <p>Phone: 623-837(0555)</p>
             <p>Address: 6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
             <p>Email: <a href="">sales@phoenixpools.com</a></p>
         </div>
-        
-
         <div id="item-3" class="items">
             <p>© 2015 - 2020</p>
             <p>Phoenix Pools | All Right Reserved.</p>
             <p>AZ LIC #JAU4002817</p>
         </div>
   </div>
+
+  <script src="JS/main.js"></script>
 </body>
 </html>
