Finished Home and Gallery

--- a/Gallery.html
+++ b/Gallery.html
@@ -25,33 +25,33 @@
       </div>
 
       <div id="Gallery">
-            <img src="images/Gallery1.jpg" id="item-3-1" class="images" onclick="galleryImg1()">
-            <img src="images/Gallery2.jpg" id="item-3-2" class="images" onclick="galleryImg2()">
-            <img src="images/Gallery3.jpg" id="item-3-3" class="images" onclick="galleryImg3()">
-            <img src="images/Gallery4.jpg" id="item-3-4" class="images" onclick="galleryImg4()">
-            <img src="images/Gallery5.jpg" id="item-3-5" class="images" onclick="galleryImg5()">
-            <img src="images/Gallery6.jpg" id="item-3-6" class="images" onclick="galleryImg6()">
-            <img src="images/Gallery7.jpg" id="item-3-7" class="images" onclick="galleryImg7()">
-            <img src="images/Gallery8.jpg" id="item-3-8" class="images" onclick="galleryImg8()">
-            <img src="images/Gallery9.jpg" id="item-3-9" class="images" onclick="galleryImg9()">
-            <img src="images/Gallery10.jpg" id="item-3-10" class="images" onclick="galleryImg10()">
-            <img src="images/Gallery11.jpg" id="item-3-11" class="images" onclick="galleryImg11()">
-            <img src="images/Gallery12.jpg" id="item-3-12" class="images" onclick="galleryImg12()">
+          <div id="item-3-0">
+          <p>Phoenix Pools & Spas is a family-owned and operated company. Since August 6, 2015, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community.</p>
+          <p>At Phoenix Pools, we have built our reputation as Phoenix pool builders, contractors, and designers by focusing on top-quality contracting, unique custom designs, and fantastic customer service. We use only the best equipment a  nd materials available on the market, and we custom-design every project to meet our customers’ budgets as well as their dreams . . . take a look at our Gallery to see the beautiful pools we’ve created with our customers.</p>
+          <p>In addition to designing and building new swimming pools, we also remodel, repair for families and property owners in our community: Phoenix, Anthem, Peoria, Glendale, Scottsdale, Buckeye, Goodyear, Litchfield Park, Gilbert, Chandler and Mesa.</p>
+          <p>Because we work so hard to keep our reputation as the Phoenix pool contractor who gives our customers our very best, many of our customers are customers for life. We’re a close-knit, friendly company. We call ourselves and we’re looking forward to getting to know you. Anytime you want to talk to us, just give us a call at 623-837(0555).</p>
+          </div>
 
-            <img src="images/Gallery1.jpg" class="imagesFS" id="FSImage1">
-            <img src="images/Gallery2.jpg" class="imagesFS" id="FSImage2">
-            <img src="images/Gallery3.jpg" class="imagesFS" id="FSImage3">
-            <img src="images/Gallery4.jpg" class="imagesFS" id="FSImage4">
-            <img src="images/Gallery5.jpg" class="imagesFS" id="FSImage5">
-            <img src="images/Gallery6.jpg" class="imagesFS" id="FSImage6">
-            <img src="images/Gallery7.jpg" class="imagesFS" id="FSImage7">
-            <img src="images/Gallery8.jpg" class="imagesFS" id="FSImage8">
-            <img src="images/Gallery9.jpg" class="imagesFS" id="FSImage9">
-            <img src="images/Gallery10.jpg" class="imagesFS" id="FSImage10">
-            <img src="images/Gallery11.jpg" class="imagesFS" id="FSImage11">
-            <img src="images/Gallery12.jpg" class="imagesFS" id="FSImage12">
-      </div>
+            <img src="images/Gallery1.jpg" id="item-3-1" class="images">
+            <img src="images/Gallery2.jpg" id="item-3-2" class="images">
+            <img src="images/Gallery3.jpg" id="item-3-3" class="images">
+            <img src="images/Gallery4.jpg" id="item-3-4" class="images">
+            <img src="images/Gallery5.jpg" id="item-3-5" class="images">
+            <img src="images/Gallery6.jpg" id="item-3-6" class="images">
+            <img src="images/Gallery7.jpg" id="item-3-7" class="images">
+            <img src="images/Gallery8.jpg" id="item-3-8" class="images">
+            <img src="images/Gallery9.jpg" id="item-3-9" class="images">
+            <img src="images/Gallery10.jpg" id="item-3-10" class="images">
+            <img src="images/Gallery11.jpg" id="item-3-11" class="images">
+            <img src="images/Gallery12.jpg" id="item-3-12" class="images">
 
+            <p id="item-3-13">One of the largest pools that can be constructed on a city residential lot,  it is 22 feet (6.7m) by 50 feet (15.2m), 4 foot (1.2m) shallow end and 9 foot (2.7m) deep end. Holds 200,000 liters (52834 gallons) of water. Over 3800 sq ft of concrete was poured for the pool decking and basketball court.  Construction started April 2018, completed in June 2018. </p>
+
+            <iframe id="item-3-14" width="560" height="315" src="https://www.youtube.com/embed/m3iMU6q-zBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </div>
+
+            
       <div id="footer">
         <div id="item-1" class="items">
             <p>Saturday: 10:00AM - 4:00PM</p>
