Fixed the order form page

--- a/Form.html
+++ b/Form.html
@@ -52,7 +52,7 @@
         <hr id="underline">
       </div>
       <div class="grid-container2">
-          <h1 id="logo">Order Form</h1>
+          <h1 id="logo" style="font-size: 60px;">Order Form</h1>
     </div>
     <form>
         <fieldset>
