added about page

--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
-    <div class="topnav">
+      <div class="topnav">
         <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="Gallery.html">Gallery</a>
@@ -22,6 +22,37 @@
         </div>
         <h1 id="logo">Pools and Spas</h1>
         <hr id="underline">
+      </div>
+
+      <div id="aboutContainer">
+        <div id="item-4-1" class="aboutItems">
+          <h1>About Us</h1>
+        </div>
+
+        <div id="item-4-2" class="aboutItems" style="padding-top: 5%;">
+          <p>Phoenix Pools & Spas is a family-owned and operated company. Since August 6, 2002, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community.</p>
+          <p>At Thunderbird Pools, we have built our reputation as Phoenix pool builders, contractors, and designers by focusing on top-quality contracting, unique custom designs, and fantastic customer service. We use only the best equipment and materials available on the market, and we custom-design every project to meet our customers’ budgets as well as their dreams.</p>
+          <p>In addition to designing and building new swimming pools, we also remodel, repair for families and property owners in our community: Phoenix, Anthem, Peoria, Glendale, Scottsdale, Buckeye, Goodyear, Litchfield Park, Gilbert, Chandler and Mesa.</p>
+          <p>Because we work so hard to keep our reputation as the Phoenix pool contractor who gives our customers our very best, many of our customers are customers for life. We’re a close-knit, friendly company. We call ourselves and we’re looking forward to getting to know you. Anytime you want to talk to us, just give us a call at 623-837(0555).</p>
+        </div>
+
+        <div id="item-4-3" class="aboutItems">
+          <h2>About Our company</h2>
+          <p>Phoenix Pools & Spas is a family-owned and -operated company. Since August 6, 2015, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community….</p>
+        </div>
+
+        <img src="images/Gallery11.jpg" id="item-4-4" class="aboutImgs">
+        <img src="images/Gallery3.jpg" id="item-4-5" class="aboutImgs">
+
+        <div id="item-4-6" class="aboutItems">
+          <h2>About Us</h2>
+          <p>In 1996, I went to work as a design consultant for a large company and won many sales, design, and achievement awards. I ultimately became a sales manager with a large staff and was quite successful. With all my experience and knowledge, I felt it was time to….</p>
+        </div>
+
+        <div id="item-4-7" class="aboutItems" style="padding-top: 5%;">
+          <h1>We Can Help You With Any Project</h1>
+          <button><a href="Form.html" id="aboutButton">Get In Touch</a></button>
+        </div>
       </div>
 
       <div id="footer">
