--- a/Gallery.html
+++ b/Gallery.html
@@ -54,9 +54,8 @@
             
       <div id="footer">
         <div id="item-1" class="items">
-            <p>Saturday: 10:00AM - 4:00PM</p>
-            <p>Sunday: Closed</p>
-            <p>Weekdays: 9:00AM - 5:00PM</p>
+            <p>Credit to DarvikMedia for the video.</p>
+            <p><a href="https://youtu.be/m3iMU6q-zBc">https://youtu.be/m3iMU6q-zBc</a></p>
         </div>
         <div id="item-2" class="items">
             <p>Phone: 623-837(0555)</p>
