finished site, added mobile scaling

--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
       </div>
 
       <div id="aboutContainer">
-        <div id="item-4-1" class="aboutItems">
+        <div id="item-4-1" class="headerImg">
           <h1>About Us</h1>
         </div>
 
@@ -41,8 +41,8 @@
           <p>Phoenix Pools & Spas is a family-owned and -operated company. Since August 6, 2015, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community….</p>
         </div>
 
-        <img src="images/Gallery11.jpg" id="item-4-4" class="aboutImgs">
-        <img src="images/Gallery3.jpg" id="item-4-5" class="aboutImgs">
+        <img src="images/Gallery3.jpg" id="item-4-4" class="aboutImgs">
+        <img src="images/Gallery4.jpg" id="item-4-5" class="aboutImgs">
 
         <div id="item-4-6" class="aboutItems">
           <h2>About Us</h2>
