--- a/Gallery.html
+++ b/Gallery.html
@@ -24,6 +24,10 @@
         <hr id="underline">
       </div>
 
+      <div id="galleryHeader" class="headerImg">
+        <h1>Gallery</h1>
+      </div>
+
       <div id="Gallery">
           <div id="item-3-0">
           <p>Phoenix Pools & Spas is a family-owned and operated company. Since August 6, 2015, we’ve made it our goal to be the best Phoenix pool contractor designing and building beautiful swimming pools for our many customers in the Phoenix community.</p>
@@ -32,6 +36,7 @@
           <p>Because we work so hard to keep our reputation as the Phoenix pool contractor who gives our customers our very best, many of our customers are customers for life. We’re a close-knit, friendly company. We call ourselves and we’re looking forward to getting to know you. Anytime you want to talk to us, just give us a call at 623-837(0555).</p>
           </div>
 
+          <div id="galleryImgs">
             <img src="images/Gallery1.jpg" id="item-3-1" class="images">
             <img src="images/Gallery2.jpg" id="item-3-2" class="images">
             <img src="images/Gallery3.jpg" id="item-3-3" class="images">
@@ -44,13 +49,12 @@
             <img src="images/Gallery10.jpg" id="item-3-10" class="images">
             <img src="images/Gallery11.jpg" id="item-3-11" class="images">
             <img src="images/Gallery12.jpg" id="item-3-12" class="images">
+          </div>
 
             <p id="item-3-13">One of the largest pools that can be constructed on a city residential lot,  it is 22 feet (6.7m) by 50 feet (15.2m), 4 foot (1.2m) shallow end and 9 foot (2.7m) deep end. Holds 200,000 liters (52834 gallons) of water. Over 3800 sq ft of concrete was poured for the pool decking and basketball court.  Construction started April 2018, completed in June 2018. </p>
 
-            <iframe id="item-3-14" width="560" height="315" src="https://www.youtube.com/embed/m3iMU6q-zBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
-
+            <iframe id="item-3-14" src="https://www.youtube.com/embed/m3iMU6q-zBc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+      </div>
             
       <div id="footer">
         <div id="item-1" class="items">
@@ -67,7 +71,7 @@
             <p>Phoenix Pools | All Right Reserved.</p>
             <p>AZ LIC #JAU4002817</p>
         </div>
-  </div>
+      </div>
 
   <script src="JS/main.js"></script>
 </body>
